# mamaope_legal

./: .gitignore  README.md  docker-compose.yml  env.example
.github/workflows/: ci.yml  security-compliance.yml
backend/: Dockerfile  README.md  alembic.ini  init.sql  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_vector_retrieval.py
backend/alembic/: env.py
backend/alembic/versions/: 27fc98fb05ab_create_initial_tables.py
backend/config/: model_profiles.json
backend/scripts/: data_ingestion.py  data_ingestion_script.py
backend/src/mamaope_legal/: __init__.py  main.py
backend/src/mamaope_legal/api/: __init__.py
backend/src/mamaope_legal/api/v1/: auth.py  chat_sessions.py  legal_consultation.py
backend/src/mamaope_legal/core/: config.py  constants.py  database.py  response_utils.py  security.py  simple_config.py
backend/src/mamaope_legal/models/: __init__.py  base.py  legal_consultation.py  user.py
backend/src/mamaope_legal/schemas/: __init__.py
backend/src/mamaope_legal/services/: conversational_service.py  database_service.py  email_service.py  genai_client.py  legal_consultation_service.py  model_config.py  prompt_manager.py  query_classifier.py  response_processor.py  vectordb_service.py  vectorstore_manager.py
frontend/: auth-styles.css  auth.html  auth.js  index.html  nginx.conf  script.js  style.css
terraform/: main.tf
